[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data_squirrel"
version = "0.1.0.0"
description = "Save data at time of generation and share via common Python API using architecture as code concept"
readme = "README.md"
authors = [{ name = "Jennifer Pearl", email = "jenpearl5@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = "<3.10"

[project.scripts]
make_shared_python_nut_container = "data_squirrel.make_single_api_file:script_run"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]