[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data_nut_squirrel"
version = "1.2.1.0"
description = "Wrapper around serialization and provides strict data typing when using type hints"
readme = "README.md"
authors = [{ name = "Jennifer Pearl", email = "jenpearl5@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = "<3.10"

[project.urls]
Documentation = "https://docs.google.com/document/d/1FRSHdIqurGtHC8vD-rI5Ryw-NAj9xbYtGOq5UFW55iU/edit"
Repository = "https://github.com/LunarFawn/rna_squirrel.git"

[project.scripts]
make_data_squirrel_api = "data_squirrel.make_single_api_file:script_run"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]